refactor: 추가된 컬럼에 따른 수정사항 반영